Make the project accessible as a freestanding binary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,15 @@ name = "pwos"
 version = "0.1.0"
 edition = "2018"
 
+[[bin]]
+name = "pwos"
+test = false
+bench = false
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
+
 [dependencies]
